# ejemploNDK

./: settings.gradle
Pruebas/src/main/java/com/example/pruebas/: PruebasVarias.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/windows10/androidndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Complejo.cpp  Complejo.h  aplicarComplejo.cpp  filter.cpp  matrizOLA.cpp  metodoLPC.cpp  multComplexI.cpp  multComplexR.cpp  native-lib.cpp  pressStack.cpp
app/src/main/java/com/example/windows10/androidndk/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/windows10/androidndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
